Fixede success redirect til index

--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -14,7 +14,7 @@
 <p>
     Email: <span th:text="${user.email}"></span>
 </p>
-<form action="/index" method="post">
+<form action="/success" method="get">
 <button type="submit">Tryk for at vende tilbage</button>
 </form>
 
